--- a/EmailSig1906-V1_All.html
+++ b/EmailSig1906-V1_All.html
@@ -92,13 +92,43 @@
 
         <tr><td height='10' style="height:10px;font-size:10px;mso-line-height-rule:exactly;line-height:5px;">&nbsp;</td></tr>
 
+        <tr>
+            <td width="220" style="width:220px; margin:0; padding:0; vertical-align:top;">
+              <a href='http://www.q-see.com' title="Q-See" style="border:none;text-decoration:none;">
+                <img moz-do-not-send="true" src="https://q-see.github.io/MovedLocations1906.gif" alt="We've moved locations!" style="border:none;width:220px;height:41px;">
+              </a>
+            </td>
+        </tr>
+
+        <tr><td height='10' style="height:5px;font-size:5px;mso-line-height-rule:exactly;line-height:5px;">&nbsp;</td></tr>
+
+        <tr style="margin:0;padding:0;">
+          <td style="margin:0;padding:0;font-family:'Arial',sans-serif;white-space:nowrap;border:none;text-decoration:none;">
+            <span style="border:none;text-decoration:none;"><b>NEW OFFICE ADDRESS</b></span>
+          </td>
+        </tr>
+
         <tr style="margin:0;padding:0;">
           <td style="margin:0;padding:0;font-family:'Arial',sans-serif;white-space:nowrap;border:none;text-decoration:none;">
             <span style="border:none;text-decoration:none;">160 S. Old Springs Rd., Ste. 220, Anaheim, CA 92808</span>
           </td>
         </tr>
 
-        <tr><td height='12' style="height:12px;font-size:12px;mso-line-height-rule:exactly;line-height:12px;">&nbsp;</td></tr>
+        <tr><td height='10' style="height:5px;font-size:5px;mso-line-height-rule:exactly;line-height:5px;">&nbsp;</td></tr>
+
+        <tr style="margin:0;padding:0;">
+          <td style="margin:0;padding:0;font-family:'Arial',sans-serif;white-space:nowrap;border:none;text-decoration:none;">
+            <span style="border:none;text-decoration:none;"><b>NEW WAREHOUSE ADDRESS</b></span>
+          </td>
+        </tr>
+
+        <tr style="margin:0;padding:0;">
+          <td style="margin:0;padding:0;font-family:'Arial',sans-serif;white-space:nowrap;border:none;text-decoration:none;">
+            <span style="border:none;text-decoration:none;">16410 Bloomfield Ave., Cerritos, CA 90703</span>
+          </td>
+        </tr>
+
+        <tr><td height='6' style="height:6px;font-size:12px;mso-line-height-rule:exactly;line-height:12px;">&nbsp;</td></tr>
 
       </table>
     </td>
