--- a/EmailSig1906-V1_All.html
+++ b/EmailSig1906-V1_All.html
@@ -58,27 +58,27 @@
 
             <tr style="margin:0;padding:0;">
               <td style="margin:0;padding:0;font-family:'Arial',sans-serif;white-space:nowrap;border:none;text-decoration:none;">
-                <span style="border:none;text-decoration:none;color:#6d6e71"><b>O :</b> 714.998.3440 x361</span>
+                <span style="border:none;text-decoration:none;color:#6d6e71"><b>OFFICE :</b> 714.462.5588</span>
               </td>
             </tr>
             <tr style="margin:0;padding:0;">
               <td style="margin:0;padding:0;font-family:'Arial',sans-serif;white-space:nowrap;border:none;text-decoration:none;">
-                <span style="border:none;text-decoration:none;color:#6d6e71"><b>C :</b> 888.555.3440</span>
+                <span style="border:none;text-decoration:none;color:#6d6e71"><b>DIRECT :</b> 714.698.4386</span>
               </td>
             </tr>
             <tr style="margin:0;padding:0;">
               <td style="margin:0;padding:0;font-family:'Arial',sans-serif;white-space:nowrap;border:none;text-decoration:none;">
-                <span style="border:none;text-decoration:none;color:#6d6e71"><b>F :</b> 714.998.4923</span>
+                <span style="border:none;text-decoration:none;color:#6d6e71"><b>FAX :</b> 714.998.4923</span>
               </td>
             </tr>
             <tr style="margin:0;padding:0;">
               <td style="margin:0;padding:0;font-family:'Arial',sans-serif;white-space:nowrap;border:none;text-decoration:none;">
-                <span style="border:none;text-decoration:none;color:#6d6e71"><b>E :</b> johns@q-see.com</span>
+                <span style="border:none;text-decoration:none;color:#6d6e71"><b>E-MAIL :</b> johns@q-see.com</span>
               </td>
             </tr>
             <tr style="margin:0;padding:0;">
               <td style="margin:0;padding:0;font-family:'Arial',sans-serif;white-space:nowrap;border:none;text-decoration:none;">
-                <span style="border:none;text-decoration:none;color:#6d6e71"><b>W :</b> www.Q-See.com</span>
+                <span style="border:none;text-decoration:none;color:#6d6e71"><b>WEB :</b> www.Q-See.com</span>
               </td>
             </tr>
 
